--- a/tmpl/fires.tmpl
+++ b/tmpl/fires.tmpl
@@ -1,10 +1,7 @@
 <ul class="Fires">
 	<?js 
 		this.fires.forEach(function(fire){
-	?>
-	<li><?js linkto(fire, fire); ?></li>
-	<?js
-		
+			print('<li>' + linkto(fire, fire) + '</li>');
 		});
 	?>
 </ul>
