--- a/tmpl/file.tmpl
+++ b/tmpl/file.tmpl
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-  <title>Package API</title>
-	
-	<script src="js/sh_main.min.js"> </script>
-  <script src="js/lang/sh_javascript.min.js"> </script>
-  
-  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<title>Package API</title>
 
-	<div class="header">
-    <?js print(render('header.tmpl', docs)); ?>
+		<script src="js/sh_main.min.js"> </script>
+		<script src="js/lang/sh_javascript.min.js"> </script>
 
-    <div class="type">File</div>
-    <h1><?js= title ?></h1>
-  </div>
-  
-  <div class="content">
-  	<pre class="example sh_javascript"><?js print(htmlsafe(docs.code)); ?></pre>
-  </div>
+		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+	</head>
+	<body>
 
-  <?js print(render('footer.tmpl', this)); ?>
-	
-	<script> sh_highlightDocument(); </script>
-</body>
+		<header>
+			<div class="header">
+				<?js print(render('header.tmpl', docs)); ?>
+
+				<div class="type">File</div>
+				<h1><?js= title ?></h1>
+			</div>
+		</header>
+
+		<div class="content">
+			<pre class="example sh_javascript"><?js print(htmlsafe(docs.code)); ?></pre>
+		</div>
+
+		<?js print(render('footer.tmpl', this)); ?>
+
+		<script> sh_highlightDocument(); </script>
+	</body>
 </html>
