--- a/tmpl/kind_default_index.tmpl
+++ b/tmpl/kind_default_index.tmpl
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-  <title>jWire API</title>
-</head>
-<body id="overview">
+	<head>
+		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+		<title>jWire API</title>
+	</head>
+	<body id="overview">
 
-	<div class="header">
-    <?js print(render('header.tmpl', this)); ?>
+		<header>
+			<div class="header">
+				<?js print(render('header.tmpl', this)); ?>
 
-    <h1><?js print(title); ?></h1>
-  </div>
-  
-  <div class="content">
-  	<table>
-  		<tbody>
-        <?js docs.forEach(function(doc) { ?>
-        <tr>
-          <td>
-		        <?js= linkto(doc.longname, doc.longname) ?>
-		      </td>
-          <td><?js= doc.summary ?></td>
-        </tr>
-        <?js }); ?>
-  		</tbody>
-  	</table>
-  </div>
-  
-  <?js print(render('footer.tmpl', this)); ?>
-  
-</body>
+				<h1><?js print(title); ?></h1>
+			</div>
+		</header>
+		<div class="content">
+			<table>
+				<tbody>
+					<?js docs.forEach(function(doc) { ?>
+					<tr>
+						<td>
+							<?js= linkto(doc.longname, doc.longname) ?>
+						</td>
+						<td><?js= doc.summary ?></td>
+					</tr>
+					<?js }); ?>
+				</tbody>
+			</table>
+		</div>
+
+		<?js print(render('footer.tmpl', this)); ?>
+
+	</body>
 </html>
