--- a/tmpl/mixin.tmpl
+++ b/tmpl/mixin.tmpl
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-  <title>jWire API</title>
-</head>
-<body id="overview">
+	<head>
+		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+		<title>jWire API</title>
+	</head>
+	<body id="overview">
 
-	<div class="header">
-    <?js print(render('header.tmpl', this)); ?>
+		<header>
+			<div class="header">
+				<?js print(render('header.tmpl', this)); ?>
 
-    <div id="title">Package API</div>
-    <div class="type">Mixin</div>
-    <h1>Global</h1>
-  </div>
-  
-  <div class="content">
-  </div>
-  
-  <?js print(render('footer.tmpl', this)); ?>
-  
-</body>
+				<div id="title">Package API</div>
+				<div class="type">Mixin</div>
+				<h1>Global</h1>
+			</div>
+		</header>
+
+		<div class="content">
+		</div>
+
+		<?js print(render('footer.tmpl', this)); ?>
+
+	</body>
 </html>
