--- a/tmpl/namespace_index.tmpl
+++ b/tmpl/namespace_index.tmpl
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-  <title>jWire API</title>
-</head>
-<body id="overview">
+	<head>
+		<link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+		<title>jWire API</title>
+	</head>
+	<body id="overview">
 
-	<div class="header">
-    <?js print(render('header.tmpl', this)); ?>
+		<header>
+			<div class="header">
+				<?js print(render('header.tmpl', this)); ?>
 
-    <h1>Namespaces</h1>
-  </div>
-  
-  <div class="content">
-    <table>
-      <tbody>
-        <?js docs.forEach(function(doc) { ?>
-        <tr>
-          <td>
-          	<?js print(linkto(doc.longname, doc.longname)); ?>
-          </td>
-          <td><?js= (doc.summary) ? doc.summary : doc.description ?></td>
-        </tr>
-        <?js }); ?>
-      </tbody>
-    </table>
-  </div>
-  
-  <?js print(render('footer.tmpl', this)); ?>
-  
-</body>
+				<h1>Namespaces</h1>
+			</div>
+		</header>
+
+		<div class="content">
+			<table>
+				<tbody>
+					<?js docs.forEach(function(doc) { ?>
+					<tr>
+						<td>
+							<?js print(linkto(doc.longname, doc.longname)); ?>
+						</td>
+						<td><?js= (doc.summary) ? doc.summary : doc.description ?></td>
+					</tr>
+					<?js }); ?>
+				</tbody>
+			</table>
+		</div>
+
+		<?js print(render('footer.tmpl', this)); ?>
+
+	</body>
 </html>
